# Economy-Parser

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  build_web.bat  local_web_deploy.bat  vcpkg.json
Common/include/: FileSytem.h  Metrics.h  MyImage.h  Parser.cpp  Parser.h  Renderer.h
Common/src/: FileSytem.cpp  MyImage.cpp  Parser.cpp  Renderer.cpp
Data/: 1.21.5.csv  test.csv
Ressource/: csvCreator.py  output.csv
Ressource/Files/: 1.21.5_atlas_metadata.csv  1.21.5_economy.csv
Ressource/Images/: atlasCreator.py  csvCreator.py
